compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__wrap_case_clause_with_braces_selecting_pattern_2.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\ntype PokemonType {\n  Water\n  Fire\n  Sleep\n}\n\npub fn f(option) {\n  case pokemon_type {\n    Water | Fire -> evade()\n    Sleep -> sleep()\n  }\n}"
---
----- BEFORE ACTION

type PokemonType {
  Water
  Fire
  Sleep
}

pub fn f(option) {
  case pokemon_type {
    Water | Fire -> evade()
            ↑              
    Sleep -> sleep()
  }
}


----- AFTER ACTION

type PokemonType {
  Water
  Fire
  Sleep
}

pub fn f(option) {
  case pokemon_type {
    Water | Fire -> {
      evade()
    }
    Sleep -> sleep()
  }
}
