compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__wrap_function_in_anonymous_function_without_shadowing.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "pub fn main() {\n  int\n}\n\nfn int(i: Int) {\n  todo\n}\n"
---
----- BEFORE ACTION
pub fn main() {
  int
  ↑  
}

fn int(i: Int) {
  todo
}


----- AFTER ACTION
pub fn main() {
  fn(int_2) { int(int_2) }
}

fn int(i: Int) {
  todo
}
